my resume section is done

--- a/dev.html
+++ b/dev.html
@@ -25,7 +25,7 @@
             <h1 class="hText">Mary Hardy</h1>
             <p class="pText mb">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
             <button class="btn">Download CV</button>
-            <button class="btn2">Download CV</button>
+            <button class="btn2">Contact</button>
         </div>
         <img src="/images/hardy.png" alt="hardy" srcset="">
        </div>
@@ -84,6 +84,65 @@
             <p class="pText">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
           </div>
           </div>
+          </section>
+          <!-- resume summery -->
+          <section>
+            <h1 class="sectionTittle textAlign">A summery of My Resume</h1>
+            <div class="resumeContainer">
+              <!-- education -->
+              <div class="resumeColumn">
+                <div class="experience">
+                  <h3 class="sectionTittleTwo">My Education</h3>
+                <h4 class="sectionSubTittle">Master in Computer Engineering</h4>
+                <h5 class="sectionMinTittle">Harvard University / 2015 - 2017</h5>
+                <p class="pText">List skill/technologies here. You can change the icon above 
+  to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="experience">
+                <h4 class="sectionSubTittle">Master in Computer Engineering</h4>
+                <h5 class="sectionMinTittle">Harvard University / 2015 - 2017</h5>
+                <p class="pText">List skill/technologies here. You can change the icon above 
+  to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="experience">
+                <h4 class="sectionSubTittle">Master in Computer Engineering</h4>
+                <h5 class="sectionMinTittle">Harvard University / 2015 - 2017</h5>
+                <p class="pText">List skill/technologies here. You can change the icon above 
+  to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+              </div>
+              <!-- experience -->
+              <div class="resumeColumn">
+                <div class="experience">
+                  <div class="experience">
+                  <h3 class="sectionTittleTwo">My Experience</h3>
+                <h4 class="sectionSubTittle">Sr. Font End Developer</h4>
+                <h5 class="sectionMinTittle">Apple Inc / 2020 - Current</h5>
+                <p class="pText">List skill/technologies here. You can change the icon above 
+  to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="experience">
+                <h4 class="sectionSubTittle">Jr. Font End Developer</h4>
+                <h5 class="sectionMinTittle">Dribbble Inc / 2018 - 2022</h5>
+                <p class="pText">List skill/technologies here. You can change the icon above 
+  to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="experience">
+                <h4 class="sectionSubTittle">HTML Developer</h4>
+                <h5 class="sectionMinTittle">Adobe Inc / 2017 - 2018</h5>
+                <p class="pText">List skill/technologies here. You can change the icon above 
+  to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                </div>
+              </div>
+            </div>
+            <div class="mt textAlign">
+              <button class="btn">Download CV</button>
+            </div>
           </section>
     </main>
     <footer></footer>
