--- a/dev.html
+++ b/dev.html
@@ -145,6 +145,25 @@
             </div>
           </section>
     </main>
-    <footer></footer>
+    <footer class="mt">
+      <div class="footColumn">
+        <h1 class="sectionTittle">Let's Connect</h1>
+        <p class="pText">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+        <div class="social">
+          <a href="#" target="_blank"><img src="/images/icons/facebook.png" alt="facebook" srcset=""></a>
+          <a href="#" target="_blank"><img src="/images/icons/twitter.png" alt="twitter" srcset=""></a>
+          <a href="#" target="_blank"><img src="/images/icons/insta.png" alt="instagram" srcset=""></a>
+        </div>
+      </div>
+      <div class="footColumn">
+        <h1 class="sectionTittle">Let's Message Me</h1>
+        <form action="">
+          <input type="text" name="" id="" placeholder="Your Name">
+          <input type="email" name="" id="" placeholder="Your Email">
+          <textarea name="" id="" cols="30" rows="20" placeholder="Your Message"></textarea>
+          <input class="btn" type="button" value="Submit">
+        </form>
+      </div>
+    </footer>
   </body>
 </html>
