--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DEV PORTFOLIO</title>
-    <link rel="stylesheet" href="/styles/dev.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
+    <script src="https://kit.fontawesome.com/71c785609e.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <!--  header section -->
@@ -24,8 +25,8 @@
             <h3 class="hsubText">Hi, I am</h4>
             <h1 class="hText">Mary Hardy</h1>
             <p class="pText mb">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-            <button class="btn">Download CV</button>
-            <button class="btn2">Contact</button>
+            <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
+            <button class="btn2"><i class="fa-solid fa-phone"></i> Contact</button>
         </div>
         <img src="/images/hardy.png" alt="hardy" srcset="">
        </div>
@@ -141,7 +142,7 @@
               </div>
             </div>
             <div class="mt textAlign">
-              <button class="btn">Download CV</button>
+              <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
           </section>
     </main>
