--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DEV PORTFOLIO</title>
     <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="/styles/media.css">
     <script src="https://kit.fontawesome.com/71c785609e.js" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -28,37 +29,37 @@
             <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
             <button class="btn2"><i class="fa-solid fa-phone"></i> Contact</button>
         </div>
-        <img src="/images/hardy.png" alt="hardy" srcset="">
+        <img class="image__hardy" src="/images/hardy.png" alt="hardy" srcset="">
        </div>
     </header>    
     <main>
         <!-- about me section -->
-         <section class="aboutContainer">
+         <section class="about__container hide">
             <h3 class="sectionTittle">About Me</h3>
-                <p class="pText">
+                <p class="pText p__none">
                     I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
                 </p>
-            <div class="aboutSummery">
-                <div class="aboutItem">
+            <div class="about__summery">
+                <div class="about__item">
                     <p class="itemTittle pText">Name</p>
                     <p class="itemDescription smTextLight">Mary Hardy</p>
                 </div>
-                <div class="aboutItem">
+                <div class="about__item">
                     <p class="itemTittle pText">Email</p>
                     <p class="itemDescription smTextLight">abc@abc.com</p>
                 </div>
-                <div class="aboutItem">
+                <div class="about__item">
                     <p class="itemTittle pText">Date of Birth</p>
                     <p class="itemDescription smTextLight">1,1,1993</p>
                 </div>
-                <div class="aboutItem">
+                <div class="about__item">
                     <p class="itemTittle pText">From</p>
                     <p class="itemDescription smTextLight">Adabor, Monsurabad</p>
                 </div>
             </div>
          </section>
          <!-- what i do section -->
-          <section class="whatIdoContainer">
+          <section class="whatIdoContainer hide">
             <div class="whatIdocontent">
                 <h3 class="sectionTittle">What I do</h3>
                 <p class="pText">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
@@ -81,17 +82,17 @@
           </div>
           <div class="skill">
             <img src="/images/icons/mongo.png" alt="MongoDB" srcset="">
-            <h3 class="smTextLight"></h3>
+            <h3 class="smTextLight">Mongo DB</h3>
             <p class="pText">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
           </div>
           </div>
           </section>
           <!-- resume summery -->
-          <section>
+          <section class="hide">
             <h1 class="sectionTittle textAlign">A summery of My Resume</h1>
-            <div class="resumeContainer">
+            <div class="resume__container">
               <!-- education -->
-              <div class="resumeColumn">
+              <div class="resume__column">
                 <div class="experience">
                   <h3 class="sectionTittleTwo">My Education</h3>
                 <h4 class="sectionSubTittle">Master in Computer Engineering</h4>
@@ -115,7 +116,7 @@
                 </div>
               </div>
               <!-- experience -->
-              <div class="resumeColumn">
+              <div class="experience__column">
                 <div class="experience">
                   <div class="experience">
                   <h3 class="sectionTittleTwo">My Experience</h3>
@@ -146,7 +147,7 @@
             </div>
           </section>
     </main>
-    <footer class="mt">
+    <footer class="mt hide">
       <div class="footColumn">
         <h1 class="sectionTittle">Let's Connect</h1>
         <p class="pText">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
