--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
             <h3 class="hsubText">Hi, I am</h4>
             <h1 class="hText">Mary Hardy</h1>
             <p class="pText mb">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-            <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
-            <button class="btn2"><i class="fa-solid fa-phone"></i> Contact</button>
+            <div class="btn__container">
+              <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
+              <button class="btn2"><i class="fa-solid fa-phone"></i> Contact</button>
+            </div>
         </div>
         <img class="image__hardy" src="/images/hardy.png" alt="hardy" srcset="">
        </div>
