primary level responsive is done, but not satisfied

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </header>    
     <main>
         <!-- about me section -->
-         <section class="about__container hide">
+         <section class="about__container">
             <h3 class="sectionTittle">About Me</h3>
                 <p class="pText p__none">
                     I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
@@ -61,7 +61,7 @@
             </div>
          </section>
          <!-- what i do section -->
-          <section class="whatIdoContainer hide">
+          <section class="whatIdoContainer">
             <div class="whatIdocontent">
                 <h3 class="sectionTittle">What I do</h3>
                 <p class="pText">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
@@ -90,7 +90,7 @@
           </div>
           </section>
           <!-- resume summery -->
-          <section class="hide">
+          <section>
             <h1 class="sectionTittle textAlign">A summery of My Resume</h1>
             <div class="resume__container">
               <!-- education -->
@@ -149,8 +149,9 @@
             </div>
           </section>
     </main>
-    <footer class="mt hide">
-      <div class="footColumn">
+    <footer class="mt">
+      <div class="foot__container">
+        <div class="footColumn">
         <h1 class="sectionTittle">Let's Connect</h1>
         <p class="pText">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
         <div class="social">
@@ -167,6 +168,7 @@
           <textarea name="" id="" cols="30" rows="20" placeholder="Your Message"></textarea>
           <input class="btn" type="button" value="Submit">
         </form>
+      </div>
       </div>
     </footer>
   </body>
